--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ async-timeout==4.0.3
 asyncpg==0.30.0
 attrs==24.2.0
 beautifulsoup4==4.12.3
+cachetools==5.5.2
 certifi==2024.7.4
 charset-normalizer==3.3.2
 contourpy==1.2.1
@@ -15,6 +16,13 @@ discord.py==2.4.0
 fandom-py==0.2.1
 fonttools==4.53.1
 frozenlist==1.4.1
+google-api-core==2.24.1
+google-api-python-client==2.160.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+googleapis-common-protos==1.66.0
+httplib2==0.31.0
 idna==3.7
 importlib_resources==6.4.3
 iso8601==2.1.0
@@ -23,8 +31,13 @@ matplotlib==3.9.2
 multidict==6.0.5
 mysql-connector-python==9.0.0
 numpy==2.0.1
+oauthlib==3.3.1
 packaging==24.1
 pillow==10.4.0
+proto-plus==1.26.1
+protobuf==5.29.5
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pydantic==2.9.2
 pydantic_core==2.23.4
 pyparsing==3.1.2
@@ -33,10 +46,13 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
 requests==2.32.3
+requests-oauthlib==2.0.0
+rsa==4.9.1
 six==1.16.0
 soupsieve==2.6
 tortoise-orm==0.21.7
 typing_extensions==4.12.2
+uritemplate==4.2.0
 urllib3==2.2.2
 yarl==1.9.4
 zipp==3.20.0
